# openGL

./: CMakeLists.txt  Graphic.cpp  OpenGL.sln  OpenGL_Lab3.sln  OpenGL_Lab3.vcxproj  OpenGL_Lab3.vcxproj.filters  README.md  spider.cpp
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  Spider.cpp
src/: main.cpp
